<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_loader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="5dp"
    android:layout_gravity="center"
    card_view:cardUseCompatPadding="true">

    <ProgressBar
        android:id="@+id/progress_Bar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Large.Inverse"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tv_no_pins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pins_not_available"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/rl_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unable_to_reach_server_please_try_later" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_error"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:padding="@dimen/button_margin"
            android:text="@string/retry"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
