<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="@dimen/layout_pin_card_radius"
    card_view:cardUseCompatPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/linear_layout_pdt_padding">

            <TextView
                android:id="@+id/tv_pin_title"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:isScrollContainer="false"
                android:text="@string/category"
                android:textColor="@color/colorGrayPrimScale2"
                android:textSize="@dimen/font_pdt2"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_pin_detail_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/image_not_available"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tv_pin_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pin_fragment_item_margin"
                android:isScrollContainer="false"
                android:text="@string/created"
                android:textColor="@color/colorGrayPrimScale0"
                android:textSize="@dimen/font_pdt2" />

            <include layout="@layout/layout_pin_likes" />

        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>
