<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="@dimen/layout_pin_card_radius"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/ll_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector"
        android:clickable="true"
        android:isScrollContainer="false"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_pin_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/image_not_available"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tv_pin_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            android:text="@string/category"
            android:textSize="@dimen/font_pdt2"
            android:layout_margin="@dimen/pin_fragment_item_margin"
            android:textColor="@color/colorGrayPrimScale0" />

        <include layout="@layout/layout_pin_likes" />

        <View
            android:id="@+id/v_divider"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/pin_fragment_item_margin"
            android:layout_height="@dimen/divider_height"
            android:background="@color/colorListPressed" />

        <TextView
            android:id="@+id/tv_pin_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            android:text="@string/user"
            android:layout_margin="@dimen/pin_fragment_pin_margin"
            android:layout_gravity="center"
            android:textColor="@color/colorGrayPrimScale0"
            android:textSize="@dimen/font_pdt2"
            android:textStyle="bold" />


    </LinearLayout>
</android.support.v7.widget.CardView>
